首次在linux上成功使用opencv

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,10 @@
     "args": ["main.cpp",
             "-Wall",
             "-pthread",
+            "-I /usr/include/opencv2",
+            "-L /usr/lib",
+            "-lopencv_core",
+            "-lopencv_highgui",
             "-Wall",
             "-g", 
             "-std=c++11",
