先前版本初始化有問題，權重沒有真正亂數，模型學習能力極低。

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,7 @@
             "-L /usr/lib",
             "-lopencv_core",
             "-lopencv_highgui",
+            "-lopencv_imgproc",
             "-Wall",
             "-g", 
             "-std=c++11",
