--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,17 +1,17 @@
 {
     "version": "0.1.0",
-    "command": "/opt/clanton-tiny/1.4.2/sysroots/i686-pokysdk-linux/usr/bin/i586-poky-linux-uclibc/i586-poky-linux-uclibc-g++",
-    //"command": "g++",
+    //"command": "/opt/clanton-tiny/1.4.2/sysroots/i686-pokysdk-linux/usr/bin/i586-poky-linux-uclibc/i586-poky-linux-uclibc-g++",
+    "command": "g++",
     "isShellCommand": true,
     "showOutput": "always",
     "args": ["main.cpp",
             "-Wall",
             "-pthread",
-            // "-I /usr/include/opencv2",
-            // "-L /usr/lib",
-            // "-lopencv_core",
-            // "-lopencv_highgui",
-            // "-lopencv_imgproc",
+            "-I /usr/include/opencv2",
+            "-L /usr/lib",
+            "-lopencv_core",
+            "-lopencv_highgui",
+            "-lopencv_imgproc",
             "-Wall",
             "-g", 
             "-std=c++11",
