可能是記憶體原因，在Train()的不同地方一直當機

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
     "showOutput": "always",
     "args": ["main.cpp",
             "-Wall",
-            "-pthread",
+            //"-pthread",
             "-I /usr/include/opencv2",
             "-L /usr/lib",
             "-lopencv_core",
