訓練過程輸出修改為"."，一個"."是百分之一迭代

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,6 +9,7 @@
             "-pthread",
             "-I /usr/include/opencv2",
             "-L /usr/lib",
+            "/usr/lib/x86_64-linux-gnu/libopencv_imgcodecs.so.3.0",
             "-lopencv_core",
             "-lopencv_highgui",
             "-lopencv_imgproc",
