修改OpenCV3的編譯錯誤，並加上-Ofast。訓練過程輸出修改為"."，一個"."是百分之一迭代

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,8 +12,10 @@
             "-lopencv_core",
             "-lopencv_highgui",
             "-lopencv_imgproc",
+            "/usr/lib/x86_64-linux-gnu/libopencv_imgcodecs.so.3.0",
             "-Wall",
-            "-g", 
+            //"-g",
+            "-Ofast", 
             "-std=c++11",
             "-D_GLIBCXX_USE_C99",
             "-o",
