--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,10 +13,10 @@
             "-lopencv_highgui",
             "-lopencv_imgproc",
             "/usr/lib/x86_64-linux-gnu/libopencv_imgcodecs.so.3.0",
-            //"-g",
-            "-Ofast", 
+            "-g",
+            //"-Ofast", 
             "-std=c++14",
-            "-D_GLIBCXX_USE_C99",
+            //"-D_GLIBCXX_USE_C99",
             "-o",
             "NeuralNetwork"]
 }
