--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     "command": "g++",
     "isShellCommand": true,
     "showOutput": "always",
-    "args": ["main.cpp",
+    "args": ["main-classifier.cpp",
             "-Wall",
             //"-pthread",
             "-I /usr/include/opencv2",
@@ -13,8 +13,8 @@
             "-lopencv_highgui",
             "-lopencv_imgproc",
             "/usr/lib/x86_64-linux-gnu/libopencv_imgcodecs.so.3.0",
-            "-g",
-            //"-Ofast", 
+            //"-g",
+            "-Ofast", 
             "-std=c++14",
             //"-D_GLIBCXX_USE_C99",
             "-o",
