新架構順單層 ForwardPropagation 完成

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
     "isShellCommand": true,
     "showOutput": "always",
     "args": [
-            "main-classification.cpp",
+            "main.cpp",
             //"main-regression.cpp",
             "-Wall",
             "-pthread",
